# 3DRenderer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
core/: CMakeLists.txt  main.cpp
core/shader/: shader.cpp
src/: main.cpp  shdr.cpp  shdr.h
src/shader/: default.vert
util/: CMakeLists.txt
util/parsing/: objLoader.cpp  objLoader.h  parser.cpp
